Bug 105737 - UI: file menu says that Ctrl+N is the shortcut to create a new Text Document
Summary: UI: file menu says that Ctrl+N is the shortcut to create a new Text Document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2017-02-03 22:23 UTC by Gilward Kukel
Modified: 2017-02-05 18:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gilward Kukel 2017-02-03 22:23:27 UTC
Description:
The file menu in Math says that Ctrl+N is the shortcut to create a new Text Document but it correctly creates a new Math formula.

Steps to Reproduce:
in Math, open menu File > New

Actual Results:  
"Ctrl+N" is shown next to "Text Document".
It's also in the toolbar icon.

Expected Results:
"Ctrl+N" should be shown next to "Formula".


Reproducible: Always

User Profile Reset: Yes

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:51.0) Gecko/20100101 Firefox/51.0
Comment 1 Takeshi Abe 2017-02-04 15:03:58 UTC
LibO 4.3.3 correctly shows Ctrl+N at the right of "Formula", so this is a regression.
Comment 3 Commit Notification 2017-02-05 18:59:04 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9421a4c05366f8e16ffe6ca25eea1dee9b1f3e1d

tdf#105737 Menu::GetItemType takes position not item id

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.