tdf#105737 Menu::GetItemType takes position not item id

And get rid of a pointless sal_uInt32-sal_uInt16 casting.

Change-Id: Ia27fd87ceb4d060dab9ea7fffd4803903a1893da